bk_ida/gccida/g0/loop_ivs_free
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5360:1: error: use of undeclared identifier 'induction_1'
induction_1 *next_induction; // [rsp+18h] [rbp-28h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5360:14: error: use of undeclared identifier 'next_induction'
induction_1 *next_induction; // [rsp+18h] [rbp-28h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5361:1: error: use of undeclared identifier 'induction_1'
induction_1 *next_inductiona; // [rsp+18h] [rbp-28h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5361:14: error: use of undeclared identifier 'next_inductiona'
induction_1 *next_inductiona; // [rsp+18h] [rbp-28h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5363:1: error: use of undeclared identifier 'induction_1'
induction_1 *induction; // [rsp+30h] [rbp-10h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5363:14: error: use of undeclared identifier 'induction'
induction_1 *induction; // [rsp+30h] [rbp-10h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5364:1: error: use of undeclared identifier 'induction_1'
induction_1 *inductiona; // [rsp+30h] [rbp-10h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5364:14: error: use of undeclared identifier 'inductiona'
induction_1 *inductiona; // [rsp+30h] [rbp-10h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5368:12: error: expected identifier or '('
 struct iv = (  struct iv_class *)*( ( _QWORD *)aux + 28); 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5370:10: error: expected expression
while (  struct iv ) 
         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5373:25: error: expected identifier or '('
for (  struct induction = iv->biv; induction;  struct induction = next_induction ) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5373:36: error: expected ';' in 'for' statement specifier
for (  struct induction = iv->biv; induction;  struct induction = next_induction ) 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5373:36: error: use of undeclared identifier 'induction'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5373:48: error: expected expression
for (  struct induction = iv->biv; induction;  struct induction = next_induction ) 
                                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5373:48: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5373:5: note: to match this '('
for (  struct induction = iv->biv; induction;  struct induction = next_induction ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5375:1: error: use of undeclared identifier 'next_induction'
next_induction = induction->next_iv; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5375:18: error: use of undeclared identifier 'induction'
next_induction = induction->next_iv; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5376:7: error: use of undeclared identifier 'induction'
free( induction); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/loop.c:5378:7: error: use of undeclared identifier 'inductiona'
for ( inductiona = iv->giv; inductiona; inductiona = next_inductiona ) 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_ivs_free/src/obj/loop.o] Error 1
